Made all sliders pretty

--- a/Website/Website.html
+++ b/Website/Website.html
@@ -1473,23 +1473,23 @@
             </p>
             <div>
                 <label for="firefliesHue">Hue: <span id="firefliesHueLabel">0</span> Degrees</label>
-                <input id="firefliesHue" type="range" min="0" max="359" step="1" value="0" class="form-control-range">
+                <input id="firefliesHue" type="range" min="0" max="359" step="1" value="0" class="form-control-range custom-range">
             </div>
             <div>
                 <label for="firefliesBrightness">Brightness: <span id="firefliesBrightnessLabel">100</span>%</label>
-                <input id="firefliesBrightness" type="range" min="0" max="100" step="1" value="100" class="form-control-range">
+                <input id="firefliesBrightness" type="range" min="0" max="100" step="1" value="100" class="form-control-range custom-range">
             </div>
             <div>
                 <label for="firefliesMinimumFlashDelay">Minimum Flash Delay: <span id="firefliesMinimumFlashDelayLabel">1000</span> milliseconds</label>
-                <input id="firefliesMinimumFlashDelay" type="range" min="100" max="30000" step="100" value="1000" class="form-control-range">
+                <input id="firefliesMinimumFlashDelay" type="range" min="100" max="30000" step="100" value="1000" class="form-control-range custom-range">
             </div>
             <div>
                 <label for="firefliesMaximumFlashDelay">Maximum Flash Delay: <span id="firefliesMaximumFlashDelayLabel">5000</span> milliseconds</label>
-                <input id="firefliesMaximumFlashDelay" type="range" min="100" max="30000" step="100" value="5000" class="form-control-range">
+                <input id="firefliesMaximumFlashDelay" type="range" min="100" max="30000" step="100" value="5000" class="form-control-range custom-range">
             </div>
             <div>
                 <label for="firefliesFlashLength">Flash Length: <span id="firefliesFlashLengthLabel">500</span> milliseconds</label>
-                <input id="firefliesFlashLength" type="range" min="50" max="15000" step="50" value="500" class="form-control-range">
+                <input id="firefliesFlashLength" type="range" min="50" max="15000" step="50" value="500" class="form-control-range custom-range">
             </div>
             <script>
                 var firefliesDebunce = Date.now()
@@ -1561,7 +1561,7 @@
             <p>Fade between a color and white</p>
             <div>
                 <label for="saturationFadeHue">Hue: <span id="saturationFadeHueLabel">0</span> Degrees</label>
-                <input id="saturationFadeHue" type="range" min="0" max="359" step="1" value="0" class="form-control-range">
+                <input id="saturationFadeHue" type="range" min="0" max="359" step="1" value="0" class="form-control-range custom-range">
             </div>
             <div>
                 <label for="saturationFadeSpeed">Fade Speed: <span id="saturationFadeSpeedLabel">10</span> seconds</label>
